# rosoomba

./: .travis.yml  LICENSE  README.md  TODO.md
.devcontainer/: Dockerfile  devcontainer.json
src/: ros2.repos
src/create_bringup/: CHANGELOG.rst  package.xml
src/create_bringup/config/: default.yaml  dualshock4.yaml  log710.yaml  xbox360.yaml
src/create_bringup/launch/: create_1.launch  create_2.launch  create_2_gazebo.launch.py  joy_teleop.launch  roomba_400.launch
src/create_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/create_description/launch/: create_1.launch  create_2.launch  roomba_400.launch
src/create_driver/: CHANGELOG.rst  CMakeLists.txt  CPPLINT.cfg  README.md  package.xml
src/create_driver/include/create_driver/: create_driver.h
src/create_driver/src/: create_driver.cpp
src/create_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/create_msgs/msg/: Bumper.msg  DefineSong.msg  MotorSetpoint.msg  PlaySong.msg
src/rosoomba_bringup/: CMakeLists.txt  package.xml
src/rosoomba_bringup/config/: gz_bridge.yaml  joy_config.yaml  rosoomba_controllers.yaml
src/rosoomba_bringup/launch/: joy_teleop.launch.py  rosoomba_sim.launch.py
src/rosoomba_description/: CMakeLists.txt  package.xml
src/rosoomba_description/launch/: description.launch.py
src/rosoomba_description/meshes/: create_1.dae  create_2.dae
src/rosoomba_description/rviz/: description.rviz
src/rosoomba_description/urdf/: base.urdf.xacro  create_1.urdf.xacro  create_2.urdf.xacro  create_2_gazebo.urdf.xacro  create_base.urdf.xacro  create_base_gazebo.urdf.xacro  gazebo.urdf.xacro  gazebo_control.xacro  gazebo_original.xacro  params.urdf.xacro  ros2_control.xacro  rosoomba.urdf.xacro  rosoomba_core.xacro  wheel.urdf.xacro  wheel.xacro
src/rosoomba_gazebo/: CMakeLists.txt  package.xml
src/rosoomba_gazebo/launch/: gazebo.launch.py
src/rosoomba_gazebo/worlds/: empty.world
src/rosoomba_msgs/: CMakeLists.txt  package.xml
src/rosoomba_msgs/msg/: ChargingState.msg  Cliff.msg  Mode.msg
