<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosoomba_description</name>
  <version>0.0.1</version>
  <description>The rosoomba_description package contains the description (mechanical, kinematic, visual, etc.) of the TBot robot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <!-- ROS2 Control dependencies -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
